Restored Java 21 upgrade after verifying pre-existing test failures