@@ -57,7 +57,7 @@ public class GameClock {
     }
 
     private void persist() {
-        String s = "%d:%d:%d:%d:%d".formatted(year, month, day, hour, minute);
+        String s = String.format("%d:%d:%d:%d:%d", year, month, day, hour, minute);
         dao.setSetting("game.date", s);
     }
 
@@ -88,7 +88,7 @@ public class GameClock {
     }
 
     public String getCurrentDateString() {
-        return "%d:%02d:%02d:%02d:%02d".formatted(year, month, day, hour, minute);
+        return String.format("%d:%02d:%02d:%02d:%02d", year, month, day, hour, minute);
     }
 
     public void shutdown() {
